// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
  id="Field"
  rows={null}
>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
    cursor="pointer"
    fontSize="1rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing=".5px"
  >
    Field Name
  </label>
  <p
    className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
    fontSize="1rem"
    fontWeight={600}
    id={null}
    letterSpacing="0.5px"
  >
    Field Value
  </p>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 iDYvxl"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="Default"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Default
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 GjPgX"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="Default"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Edge-Aligned
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kGHgnR"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 cQVdZa"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kGHgnR"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kGHgnR"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="Default"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Vertical-Aligned
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 EtesY"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 GjPgX"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 EtesY"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 EtesY"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 duGVCS"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="Default"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Default
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 GjPgX"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="2x"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      2x
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 iBrFtF"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 GjPgX"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 iBrFtF"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 iBrFtF"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="3x"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      3x
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 eHlthO"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 GjPgX"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 eHlthO"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 eHlthO"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="4x"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      4x
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 iWdQBU"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 GjPgX"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 iWdQBU"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 iWdQBU"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="Default"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Default (edge-aligned)
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kGHgnR"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 cQVdZa"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kGHgnR"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kGHgnR"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="2x"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      2x (edge-aligned)
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fBPkUJ"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 cQVdZa"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fBPkUJ"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fBPkUJ"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="3x"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      3x (edge-aligned)
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 LxGba"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 cQVdZa"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 LxGba"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 LxGba"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id="4x"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      4x (edge-aligned)
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 cEEpyQ"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Name
      </label>
      <a
        className="Typography__LinkText-sc-19auepv-1 kZPEOL Field__LinkedField-sc-11od8ug-4 cQVdZa"
        disabled={false}
        fontSize="1rem"
        fontWeight={500}
        href={null}
        letterSpacing="0.2px"
        onClick={[Function]}
        target={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
          fontSize="1rem"
          fontWeight={600}
          id={null}
          letterSpacing="0.5px"
        >
          Linked Value
        </p>
      </a>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 cEEpyQ"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 cEEpyQ"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Extra Long Field Name
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        And A Really Extra Long Field Value Can Go Here
      </p>
    </section>
  </section>
</section>
`;
